--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.1",
+    "jade": "^1.11.0",
     "mongoose": "^4.8.1",
     "request": "^2.79.0"
   }
